# weave

./: Cargo.toml  README.md  build.rs  input.css
crates/weave/: Cargo.toml  build.rs  input.css
crates/weave/src/: extract.rs  jwt.rs  main.rs  md.rs  zk.rs
crates/weave/src/assets/: app.css  app.js  icons.rs  mod.rs
crates/weave/src/pages/: index.rs  login.rs  mod.rs  note.rs  raw.rs
crates/weave/src/partials/: clip.rs  create.rs  edit.rs  head.rs  layout.rs  mod.rs  note.rs  note_list.rs  note_nav.rs  search.rs
crates/zk-rs/: Cargo.toml
crates/zk-rs/examples/: list.rs
crates/zk-rs/src/: error.rs  lib.rs  note.rs  parse.rs
notebook/: archived.md  install.md  installation.md  markdown.md  tags.md  usage.md  using.md  weave.md
notebook/.zk/: config.toml  notebook.db
src/: extract.rs  jwt.rs  main.rs  md.rs  zk.rs
src/assets/: icons.rs  mod.rs
src/pages/: index.rs  mod.rs  note.rs
src/partials/: edit.rs  head.rs  layout.rs  mod.rs  note.rs  note_list.rs
