[package]
name = "weave"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie-signed"] }
futures-concurrency = "7.6.3"
jiff = { version = "0.2", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
markdown = "1.0.0-alpha.21"
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
notify = "8.0.0"
nucleo = { version = "0.5.0", default-features = false }
regex = "1.11.1"
ring = "0.17.14"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.135"
thiserror = "2.0.10"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
rand = "0.8.5"
