[package]
name = "weave"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie-signed"] }
futures-concurrency = "7.6.3"
jiff = { version = "0.2", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
pulldown-cmark = "0.13"
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
notify = "8.0.0"
regex = "1.11.1"
ring = "0.17.14"
serde = { version = "1.0.217", features = ["serde_derive"] }
syntect = { version = "5", default-features = false, features = ["parsing", "html", "regex-fancy", "plist-load"] }
thiserror = "2.0.10"
two-face = "0.5"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zk-rs = { path = "../zk-rs" }
tower-http = { version = "0.6.8", features = ["compression-full", "trace"] }
tower = "0.5.3"
